<resources>
    <string name="app_name">FarmEvents</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="farm_events">Farm Events</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="field_cannot_be_empty">This field cannot be empty</string>
    <string name="daily_news">Daily News</string>
    <string name="controlled_enviroment">Controlled Enviroment</string>
    <string name="chicken_distribution">Chicken Distribution</string>
    <string name="warehouse_request">Warehouse Request</string>
    <string name="event_log">Event Log</string>
    <string name="egg_production">Egg Production</string>
    <string name="output_summary">Output Summary</string>
    <string name="check_list">Check List</string>
    <string name="all">All</string>
    <string name="pending">Pending</string>
    <string name="visited">Visited</string>
    <string name="code">Code</string>
    <string name="farm">Farm</string>
    <string name="department">Department</string>
    <string name="dead">Dead</string>
    <string name="consumption">Consumption</string>
    <string name="weight">Weight</string>
    <string name="water_availability">Water availability</string>
    <string name="gas_availability">Gas availability</string>
    <string name="save">Save</string>
    <string name="invalid_department">Invalid department</string>
    <string name="invalid_batch">Invalid Batch</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="air_speed">Air speed</string>
    <string name="fertile_eggs">Fertile eggs</string>
    <string name="double_eggs">Double eggs</string>
    <string name="plain_eggs">Plain eggs</string>
    <string name="broken_eggs">Broken eggs</string>
    <string name="average_weight">Average weight</string>
    <string name="average_mass">Average mass</string>
    <string name="quantity">Quantity</string>
    <string name="gross_weight">Gross weight</string>
    <string name="tare_weight">Tare weight</string>
    <string name="net_weight">Net weight</string>
    <string name="number_of_cages">Number of cages</string>
    <string name="vehicle_registration">Vehicle (Registration)</string>
    <string name="driver">Driver</string>
    <string name="source_unit">Source unit</string>
    <string name="sex">Sex</string>
    <string name="provider">Provider</string>
    <string name="age">Age</string>
    <string name="source_farm">Source farm</string>
    <string name="days">Days</string>
    <string name="add_provenance">Add provenance</string>
    <string name="food_stock">Food stock</string>
    <string name="source_batch">Source Batch</string>
    <string name="incubator">Incubator</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
</resources>