<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source_farm"
                android:textStyle="bold"/>

            <TextView android:id="@+id/tvSourceFarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source_batch"
                android:textStyle="bold"/>

            <TextView android:id="@+id/tvSourceBatch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_weight="1"/>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source_unit"
                android:textStyle="bold"/>

            <TextView android:id="@+id/tvSourceUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_weight="1"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/provider"
                android:textStyle="bold"/>

            <TextView android:id="@+id/tvProvider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_weight="1"/>
        </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textStyle="bold"/>

        <TextView android:id="@+id/tvSex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:layout_weight="1"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textStyle="bold"/>

        <TextView android:id="@+id/tvAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:layout_weight="1"/>
    </LinearLayout>



        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incubator"
                android:textStyle="bold"/>

            <TextView android:id="@+id/tvIncubator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_weight="3"/>


            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textStyle="bold"/>

            <TextView android:id="@+id/tvQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_weight="1"/>


        </LinearLayout>




    </LinearLayout>

</androidx.cardview.widget.CardView>