<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FarmListFragment">

   <LinearLayout android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <com.google.android.material.tabs.TabLayout
           android:id="@+id/tlFarms"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <com.google.android.material.tabs.TabItem
               android:id="@+id/tiAll"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/all"/>

           <com.google.android.material.tabs.TabItem
               android:id="@+id/tiPending"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/pending"/>

           <com.google.android.material.tabs.TabItem
               android:id="@+id/tiVisited"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/visited"/>
       </com.google.android.material.tabs.TabLayout>

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/rv"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@color/light_gray"/>
   </LinearLayout>



</FrameLayout>