<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyNewsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/module_header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <include layout="@layout/current_area"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingRight="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dead"/>

                        <EditText android:id="@+id/etDead"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="numberDecimal"
                            android:imeOptions="actionNext"/>

                    </LinearLayout>



                    <LinearLayout android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/consumption"/>

                        <EditText android:id="@+id/etConsumption"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="numberDecimal"
                            android:imeOptions="actionNext"/>

                    </LinearLayout>
                </TableRow>



                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingRight="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight"/>

                        <EditText android:id="@+id/etWeight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="numberDecimal"
                            android:imeOptions="actionNext"/>

                    </LinearLayout>



                    <LinearLayout android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food_stock"/>

                        <EditText android:id="@+id/etFoodStock"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="numberDecimal"
                            android:imeOptions="actionNext"/>

                    </LinearLayout>
                </TableRow>


                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingRight="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/water_availability"/>

                        <EditText android:id="@+id/etWaterAvailability"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="numberDecimal"
                            android:imeOptions="actionNext"/>

                    </LinearLayout>



                    <LinearLayout android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gas_availability"/>

                        <EditText android:id="@+id/etGasAvailability"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="numberDecimal"
                            android:imeOptions="actionNext"/>

                    </LinearLayout>
                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingTop="20dp">

                    <Button android:id="@+id/btnSave"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/save" />
                </TableRow>


            </TableLayout>

        </LinearLayout>

    </LinearLayout>



</FrameLayout>